[package]
name = "TERA_Ventl_Window"
authors = ["Matěj Zahradník [The_Universality]", "Kryštof 'Artie' Novotný"]
version = "0.1.0"
edition = "2024"
default-run = "TERA_Ventl_System"
readme = "./README.md"

[lib]
path = "./src/Modules/DS_GameObjects.rs"

[[bin]]
path = "./src/TS_System.rs"
name = "TERA_Ventl_System"

[dependencies]
ash = "0.38.0"
winit = "0.30.11"